Replaced deprecated construtors of Boolean, Integer, and Float